# rust-winrt-core-app

./: .gitignore  AppxManifest.xml  Cargo.toml  LICENSE.md  build.rs  install-example.ps1  register.ps1
examples/: blank.rs  composition.rs  main.rs
src/: App.cpp  App.h  com.rs  ffi.cpp  ffi.h  framework_view.rs  lib.rs  main.rs  pch.h
tests/: framework_view.rs
