[package]
name = "winrt-core-app"
version = "0.4.0"
authors = ["Kai <thiskaiguy@gmail.com>"]
edition = "2018"
repository = "https://github.com/thisKai/rust-winrt-core-app"
description = "Create a WinRT/UWP CoreApplication with rust"
keywords = [
    "windows",
    "runtime",
    "winrt",
    "uwp",
    "universal",
    "platform",
    "core",
    "application",
    "app",
    "coreapplication",
    "window",
    "windowing",
    "ffi",
    "api",
    "winsdk",
    "grahpics",
    "bindings",
    "ui",
    "gui",
]

[dependencies]
atomic = "0.4.5"

[dependencies.winrt]
version = "0.6.0"
features = [
    "windows-applicationmodel",
    "windows-ui",
]

[build-dependencies]
cpp_build = "0.5.1"
